# semioscan

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_BLOCK_WINDOW.md  REUSE.toml  SECURITY.md  TESTING.md
.github/workflows/: ci.yml  release.yml
docs/: NETWORK_SELECTION.md  PRICESOURCE_GUIDE.md  PROVIDER_SETUP.md  cli.md
examples/: README.md  block_window_pipe.sh  chains_config.json  custom_dex_integration.rs  daily_block_window.rs  eip4844_blob_gas.rs  router_token_discovery.rs  usd_value_validation.rs  zksync_combined_probe.rs
src/: adapter.rs  amount.rs  api.rs  block_window.rs  bootstrap.rs  combined_retriever.rs  command.rs  config.rs  config_types.rs  event.rs  fee_types.rs  gas.rs  gas_cache.rs  gas_calculator.rs  gas_l1.rs  gas_types.rs  job.rs  l2.rs  lib.rs  main.rs  price.rs  price_cache.rs  price_calculator.rs  price_legacy.rs  provider.rs  spans.rs  store.rs  token_types.rs  tokens_to.rs  transfer.rs
src/blocks/: mod.rs  window.rs
src/blocks/cache/: disk.rs  memory.rs  mod.rs  noop.rs  types.rs
src/cache/: block_range.rs  mod.rs
src/config/: constants.rs  mod.rs
src/errors/: blocks.rs  events.rs  gas.rs  mod.rs  price.rs  retrieval.rs  rpc.rs
src/events/: chunked.rs  definitions.rs  discovery.rs  filter.rs  mod.rs  realtime.rs  scanner.rs  transfers.rs
src/gas/: adapter.rs  blob.rs  cache.rs  calculator.rs  core.rs  mod.rs  transaction.rs
src/price/: cache.rs  calculator.rs  mod.rs  odos.rs
src/provider/: config.rs  factory.rs  mod.rs  pool.rs
src/retrieval/: balance.rs  calculator.rs  combined.rs  decimal_precision.rs  gas_calculation.rs  mod.rs  types.rs  utils.rs
src/tracing/: mod.rs  spans.rs
src/transport/: logging.rs  mod.rs  rate_limit.rs  retry.rs
src/types/: cache.rs  config.rs  fees.rs  gas.rs  mod.rs  price.rs  tokens.rs  wei.rs
src/types/tokens/: amount.rs  decimals.rs  mod.rs  normalized.rs  price.rs  set.rs  usd.rs
tests/: mock_price_source_tests.rs  price_cache_tests.rs  price_source_tests.rs  rate_limiting_property_tests.rs  rate_limiting_tests.rs
tests/helpers/: mod.rs
