[package]
name = "semioscan"
version = "0.1.0"
edition = "2021"

[features]
default = ["odos-example"]
odos-example = ["dep:odos-sdk", "dep:usdshe"]

[dependencies]
# Core blockchain dependencies (always required)
alloy-chains.workspace = true
alloy-contract.workspace = true
alloy-dyn-abi.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
alloy-sol-type-parser.workspace = true
alloy-transport-http.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
dotenvy.workspace = true
erc20-rs.workspace = true
op-alloy-network.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true

# Optional: Odos DEX price source example (feature: odos-example)
odos-sdk = { workspace = true, optional = true }
usdshe = { workspace = true, optional = true }
