[package]
name = "semioscan"
version = "0.2.0"
edition = "2021"
authors = ["Joseph Livesey <joseph@semiotic.ai>"]
rust-version = "1.89"
description = "Production-grade Rust library for blockchain analytics: gas calculation, price extraction, and block window calculations for EVM chains"
license = "Apache-2.0"
repository = "https://github.com/semiotic-ai/likwid"
homepage = "https://github.com/semiotic-ai/likwid/tree/main/crates/semioscan"
documentation = "https://docs.rs/semioscan"
keywords = ["ethereum", "blockchain", "analytics", "defi", "evm"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[features]
default = ["odos-example"]
odos-example = ["dep:odos-sdk"]

[dependencies]
# Core blockchain dependencies (always required)
alloy-chains = { version = "0.2", features = ["serde"] }
alloy-contract = { version = "1.1", default-features = false }
alloy-dyn-abi = { version = "1.4", default-features = false }
alloy-eips = { version = "1.1", default-features = false }
alloy-erc20-full = { version = "1.0", default-features = false }
alloy-network = { version = "1.1", default-features = false }
alloy-primitives = { version = "1.4", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1.1", default-features = false, features = [
    "anvil-node",
    "reqwest",
] }
alloy-rpc-client = "1.1"
alloy-rpc-types = "1.1"
alloy-sol-types = { version = "1.4", features = ["json"] }
alloy-sol-type-parser = "1.4"
alloy-transport = "1.1"
alloy-transport-http = { version = "1.1", default-features = false, features = [
    "reqwest",
] }
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
op-alloy-network = "0.22"
url = { version = "2.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
tracing = "0.1"

# Optional: Odos DEX price source example (feature: odos-example)
odos-sdk = { version = "1.0", features = [
    "v2",
    "v3",
    "limit-orders",
], optional = true }

[dev-dependencies]
alloy-consensus = "1.1"
alloy-transport = "1.1"
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
proptest = "1.9"
tempfile = "3.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
] }
